# accuracy_checker

./: LICENSE  MANIFEST.in  README.md  accuracy.py  crossMatrix.py  gisEnv.yaml  info.md  install.py  makefile  pyproject.toml  readme_source  requirements.txt
acc/: app.py  app_entry.py  gisEnv.yaml  gui.py  main.py  test_tkinter.py
acc/args/: args.txt
acc/jupyter/: gpkg2csv.ipynb
acc/jupyter/.ipynb_checkpoints/: gpkg2csv-checkpoint.ipynb
acc/kopia21082020/: accuracy.py  accuracyOld.py
acc/olds/jupyter/.ipynb_checkpoints/: updateData-checkpoint.ipynb
acc/olds/kopia14082020/: accuracy.py  accuracyTF.py
acc/olds/kopia21082020/: accuracyNowe.py  accuracyOld3.py
acc/src/: args.py  binary_acc.py  clip_rasterize.py  cross_matrix.py  data_recognition.py  formula2latex.py  functions.py  funkcje.py  metrics.py  metryki.py  purge.py  raport_base.py  read_data.py  report.py  subcommands.py  verbose.py
acc/src/args_data/: args.py  args_func.py  help_info.py  streamlit_args.py
acc/src/calculations/: binary_acc.py  cross_matrix.py
acc/src/data_config/: example_config.py
acc/src/templates/: report_template.html  styles.css
acc/testy/: raport.html
env_acc/: pyvenv.cfg
example/data/: binary_cross.csv  class_map.json  cross.csv  cross_full.csv  cross_raw.csv  data2cols.csv  data3cols.csv  raster.tif  reference_raster.tif  reference_vector.gpkg
example/results/: average_acc.csv  binary_cross.csv  classic_acc.csv  complex_acc.csv  cross_full.csv  report.html  simple_acc.csv
jupyter/: Untitled.ipynb  accuracy.ipynb  gpkg2csv.ipynb
jupyter/.ipynb_checkpoints/: accuracy-checkpoint.ipynb
kopia14082020/: accuracyOld2.py  indeksy.py
kopia21082020/: binTF.py  crossMatrixClass.py  indeksy.py
test1/: ref.csv  res_binTF.csv  res_classicAcc.csv  res_cros.csv  res_crosFull.csv  res_modern1.csv  res_modern2.csv  res_modernMean.csv  res_ref.csv  testData.csv  testData_raport.html
testy/: cros01.csv  dane01.csv  dane01.gpkg  r01_cros.csv  r02_trueFalse.csv  r03_classicAcc.csv  r04_modern1.csv  r05_modern2.csv
tmp/: binTF.csv  binTF_raport.html  r0binTF_1_classicAcc.csv  r0binTF_2_modern1.csv  r0binTF_3_modern2.csv
wheels/: accuracy-2.0.0-py3-none-any.whl  accuracy-3.0.0-py3-none-any.whl  accuracy-3.0.1-py3-none-any.whl  accuracy-latest-0.0.0-py3-none-any.whl  accuracy-latest.whl
