[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "accuracy"
version = '2.0.0'
authors = [{ name = "Piotr Kramarczyk", email = "piotrkramarczyk@proton.me" }]

description = "Calculates popular metrics of accuracy for classifying raster images."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["accuracy", "classification", "raster", "metrics", "GIS"]
dependencies = [
    "numpy", "pandas", "tabulate", "jinja2",
    "shapely", "fiona", "geopandas",
    "pyproj", "rtree", "rasterio", "pytexit"
]


[project.scripts]
accuracy = "acc.main:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {} # Scan the project directory with the default parameters

[tool.setuptools.package-data]
"acc" = ["src/templates/**/*"]
