[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "accuracy"
version = '3.0.0'
authors = [{ name = "Piotr Kramarczyk", email = "piotrkramarczyk@proton.me" }]

description = "Calculates popular metrics of accuracy for classifying raster images."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["accuracy", "classification", "raster", "metrics", "GIS"]
dependencies = [
    "numpy", "pandas", "tabulate", "jinja2", "platformdirs",
    "shapely", "fiona", "geopandas",
    "pyproj", "rtree", "rasterio", "pytexit", "streamlit", "streamlit-navigation-bar",
]


[project.scripts]
accuracy = "acc.main:cli"
accuracy_gui = "acc.app_entry:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {exclude = ["tests*", "__pycache__", "__pycache__*"]}

[tool.setuptools.package-data]
"acc" = ["README.md", "docs/**", "src/templates/**", "example/data/**"]
