[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "accuracy"
version = '3.0.1'
authors = [{ name = "Piotr Kramarczyk", email = "piotrkramarczyk@proton.me" }]

description = "Calculates popular metrics of accuracy for classifying raster images."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["accuracy", "classification", "raster", "metrics", "GIS"]
dependencies = [
    "numpy", "pandas", "tabulate", "jinja2", "platformdirs",
    "shapely", "fiona", "geopandas",
    "pyproj", "rtree", "rasterio", "pytexit", "streamlit", "streamlit_navigation_bar"
]


[project.scripts]
accuracy = "acc.main:cli"
accuracy_gui = "acc.app_entry:main"
# accuracy_tk = "acc.gui:run"

[tool.hatch.build]
include = [
  "acc/**",
  "docs/**",
  "example/**",
]


[tool.hatch.build.targets.wheel]
packages = ["acc"]

[tool.hatch.build.targets.sdist.force-include]
"docs" = "docs"
"example" = "example"
"README.md" = "README.md"

[tool.hatch.build.targets.wheel.force-include]
"docs" = "acc/docs"
"example/data" = "acc/example/data"
"README.md" = "acc/README.md"
